--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <img class="pic1" src="photos/Okoroma Voice of America Image.jpeg">
 
                 <h1>
-                    When Edwin Okoroma stepped on the pitch of Fetzer Field in the fall of 1963, he knew he was making history.
+                    When Edwin Okoroma stepped on the pitch of  Field in the fall of 1963, he knew he was making history.
                 </h1>
                 
                 <p>When Edwin Okoroma stepped on the pitch of Fetzer Field in the fall of 1963, he knew he was making history.
