Updated bylines in left gutter

--- a/index.html
+++ b/index.html
@@ -19,23 +19,33 @@
 
 <div class="row">
 
-<div class="col-3" id="left-gutter">
+<div class="col-12 col-sm-3" id="left-gutter">
 <div class="spacer"></div>
 <div class="bylines">
-<b>Reporting</b><br>
-<p>Brendan Lunga</p><br>
-<b>Design</b><br>
-<p>Firstname Lastname</p>
-<p>Firstname Lastname</p>
-<p>Firstname Lastname</p><br>
-<b>Editing</b><br>
-<p>Firstname Lastname</p>
-<p>Firstname Lastname</p>
-<p>Firstname Lastname</p>
+<b>Reporting</b>
+<ul><li>Brendan Lunga</li></ul>
+<b>Design</b>
+<ul>
+<li>Carson Elm-Picard</li>
+<li>Olivia Goodson</li>
+<li>Lara Crochik</li>
+</ul>
+<b>Interactive</b>
+<ul>
+<li>Carson Elm-Picard</li>
+<li>Leo Davidson</li>
+<li>Lucas Thomae</li>
+</ul>
+<b>Editing</b>
+<ul>
+<li>Lucas Thomae</li>
+<li>Shelby Swanson</li>
+<li>Gwen Peace</li>
+</ul>
 </div>
 </div>
 
-<div class="col-6" id="body-content">
+<div class="col-12 col-sm-6" id="body-content">
 <p><span class="dropcap">T</span>raveling up to Charlottesville to take on the University of Virginia, Edwin Okoroma and his fellow UNC men’s soccer teammates stopped at a restaurant in a small town between Chapel Hill and Charlottesville. They entered the diner and a lady approached him saying, “We don’t serve Blacks here.”</p>
 <p>For Black southerners during the 1960s, this was not an uncommon experience. Okoroma simply responded, “no problem,” and got up to leave the restaurant.</p>
 <p>What impressed him the most was the reaction of his teammates. They followed him out as though “[they] had rehearsed it before.”</p>
@@ -118,8 +128,9 @@
 <div class="line"></div>
 <div class="spacer"></div>
 <div class="spacer"></div>
+
 </div>
-<div class="col-3"></div>
+<div class="col-12 col-sm-3"></div>
 </div>
 
 </body>
