--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="col-12" id="hed">
     <a href="https://www.dailytarheel.com" id="masthead"><img src="photos/white_masthead.png"></img></a>
     <h1 id="headline">"This is where we will write in the text for our headline..."</h3>
-    <div id="main-art">Main Art</div>
+    <div id="main-art"><img src="photos/Main_Art.png" alt=""></div>
 </div>
 </div>
 
