--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="row">
 <div class="col-12" id="hed">
     <a href="https://www.dailytarheel.com" id="masthead"><img src="photos/white_masthead.png"></img></a>
-    <h1 id="headline">"This is where we will write in the text for our headline..."</h3>
+    <h1 id="headline"></h3>
     <div id="main-art"><img src="photos/Main_Art.png" alt=""></div>
 </div>
 </div>
@@ -132,6 +132,8 @@
 </div>
 <div class="col-12 col-sm-3"></div>
 </div>
+
+<script src="js/main.js"></script>
 
 </body>
 </html>
