--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <div class="row">
 <div class="col-12" id="hed">
     <a href="https://www.dailytarheel.com" id="masthead"><img src="photos/white_masthead.png"></img></a>
-    <h1 id="headline"></h3>
+    <h1 id="headline"></h1>
+    <h3 id="subhead">Subtitle lorem ipsum dolar</h3>
     <div id="main-art"><img src="photos/Main_Art.png" alt=""></div>
 </div>
 </div>
