Charlie Scott Photo

--- a/index.html
+++ b/index.html
@@ -85,8 +85,10 @@
 <p>“We used to take bets in the locker room about how many people would be in the stands,” Battle said.</p>
 <p>Even Charlie Scott, who became the first Black scholarship athlete at UNC when he played on the basketball team in 1967, said he had not known about Okoroma and his story.</p>
 <p>“In the 1960’s, no one ever heard or talked about anything besides football and basketball,” Scott said.</p>
-<h4>[CHARLIE SCOTT FILE HERE?]</h4>
-<p>In Talbot’s words: “Soccer was a second class citizen back then.”</p>
+<figure>
+    <img class="Team" src="photos/Charlie_Scott.png" alt="Team Photo">
+    <figcaption><i>Two of his teammates were Charlie Battle and Jim Talbot.</i></figcaption>
+</figure><p>In Talbot’s words: “Soccer was a second class citizen back then.”</p>
 <p>American sport historian Dr. Matthew Andrews believes that this second class citizenry allowed it to be the first sport to desegregate on UNC’s campus.</p>
 <p>“I suspect that it's because soccer was under the radar — no one cared about it,” Andrews said. “When Charles Scott shows up, people care. People celebrate it or people get upset about it — battle lines were drawn. Football, same thing. But soccer, I'm sure no one knew for the most part.”</p>
 <p>While Okoroma’s relationship with his teammates was good, Talbot said Okoroma “pretty much went his own way” whenever the team would hang out off the field. </p>
