--- a/index.html
+++ b/index.html
@@ -71,8 +71,10 @@
 <p>While he said experiences like these did not bother him, the thing that did irritate him about this moment was what occurred the following spring. After realizing that Okoroma was not an African-American, rather an international student from Nigeria, that same young man who hailed from Mississippi knocked on Okoroma’s door to apologize. Okoroma recognized the man but did not accept the apology.</p>
 <p>“That made me more angry,” Okoroma said. “So it was alright for him to sit down with a Black African, but it wasn't good enough to sit down with an American Black student? So I just told him I wasn't impressed with his apology and he should go.”</p>
 <p>On the UNC soccer team, though, he said he had “no problem at all” with racial discrimination. After seeing that North Carolina had a soccer team, Okoroma said he tried out with the coach, and earned a spot on the roster. The squad was largely made up of players from the northeast, coming from prep schools in states like New York, New Jersey, and Pennsylvania.</p>
-<h4>[TEAM PICTURE HERE]</h4>
-<p>Two of his teammates were Charlie Battle and Jim Talbot. They both echoed that they remembered Okoroma being a good teammate and typically quiet with the team.</p>
+<figure>
+    <img class="Team" src="photos/Team Photo.png" alt="Team Photo">
+    <figcaption><i>Two of his teammates were Charlie Battle and Jim Talbot.</i></figcaption>
+</figure><p>Two of his teammates were Charlie Battle and Jim Talbot. They both echoed that they remembered Okoroma being a good teammate and typically quiet with the team.</p>
 <p>“They were right,” Okoroma said. “I was relatively quiet. I was conscious of the fact that I was the only Black player there, and the standards meant that I had to prove myself to belong and qualify for the team.”</p>
 <p>For Talbot, when he pictured Okoroma 60 years later, what he remembered most was his broad smile. His relationship with Okoroma was practical because they played the same position. In the fall of 1963, Okoroma’s first year with the team, they both played outside left. </p>
 <p>Despite being the leading scorer of that ‘63 team, Talbot was moved to center midfield in 1964, where he said he was “less effective,” to promote Okoroma to a starting position. The decision was a good one: Okoroma finished his final year at UNC as the second-highest scorer on the team with six goals.</p>
