modified col classes

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <div class="row">
 
-<div class="col-12 col-sm-3" id="left-gutter">
+<div class="col-12 col-xs-3" id="left-gutter">
 <div class="spacer"></div>
 <div class="bylines">
 <b>Reporting</b>
@@ -52,7 +52,7 @@
 </div>
 </div>
 
-<div class="col-12 col-sm-6" id="body-content">
+<div class="col-12 col-xs-6" id="body-content">
 <p><span class="dropcap">T</span>raveling up to Charlottesville, Va., to take on the University of Virginia in 1963, Edwin Okoroma and his fellow UNC men’s soccer teammates stopped at a restaurant. They entered the diner, and a woman approached him saying, “We don’t serve Blacks here.”</p>
 <p>For Black people living in the South during the 1960s, this was not an uncommon experience. Okoroma simply said “no problem” and left the restaurant. </p>
 <p>“What impressed me the most was the minute that I got up to leave, my teammates, without anything, also got up and followed me,” Okoroma said.</p>
@@ -137,7 +137,7 @@
 <div class="spacer"></div>
 
 </div>
-<div class="col-12 col-sm-3"></div>
+<div class="col-12 col-xs-3"></div>
 </div>
 
 <script src="js/main.js"></script>
