--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 <p>Even Charlie Scott, who became the first Black scholarship athlete at UNC when he played on the basketball team in 1967, said he had not known about Okoroma and his story.</p>
 <p>“In the 1960’s, no one ever heard or talked about anything besides football and basketball,” Scott told The Daily Tar Heel in a text.</p>
 <figure>
-    <img class="Team" src="photos/Charlie_Scott.png" alt="Team Photo">
+    <img class="Team" src="photos/Charlie_Scott.jpg" alt="Team Photo">
     <figcaption><i>Photo Caption goes here.</i></figcaption>
 </figure><p>In Talbot’s words: “Soccer was a second class citizen back then.”</p>
 <p>American sport historian Matthew Andrews said he believes that, because college soccer had a low profile, this allowed it to be the first sport to desegregate on UNC’s campus.</p>
