--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>Edwin Okoroma</title>
-
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="js/main.js"></script>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://use.typekit.net/smq2azj.css">
     <link rel="stylesheet" href="https://use.typekit.net/wcn6eio.css">
+    <link rel="stylesheet" href="https://use.typekit.net/smq2azj.css">
 </head>
 <body>
 
 <div class="row">
 <div class="col-12" id="hed">
-    <a href="https://www.dailytarheel.com" id="masthead"><img src="photos/white_masthead.png"></img></a>
+    <a href="https://www.dailytarheel.com" id="masthead"><img class="mediac" src="photos/white_masthead.png"></img></a>
+    <p class="scroll disappearing-element" id="scroll"><i>Scroll to begin</i></p>
     <h1 id="headline"></h1>
 </div>
 </div>
@@ -26,8 +27,8 @@
         <div id="main-art" class="hidden"><img src="photos/Main_Art.png" alt=""></div>
     </div>
 </div>
-
 <div class="row">
+
 
 <div class="col-12 col-sm-3" id="left-gutter">
 <div class="spacer"></div>
@@ -37,8 +38,6 @@
 <b>Design</b>
 <ul>
 <li>Carson Elm-Picard</li>
-<li>Olivia Goodson</li>
-<li>Lara Crochik</li>
 </ul>
 <b>Interactive</b>
 <ul>
@@ -46,16 +45,11 @@
 <li>Leo Davidson</li>
 <li>Lucas Thomae</li>
 </ul>
-<b>Editing</b>
-<ul>
-<li>Lucas Thomae</li>
-<li>Shelby Swanson</li>
-<li>Gwen Peace</li>
-</ul>
 </div>
 </div>
 
 <div class="col-12 col-sm-6" id="body-content">
+<figcaption>Photo Courtesy of University Archives, DTH Archive</figcaption>
 <p><span class="dropcap">T</span>raveling up to Charlottesville, Va., to take on the University of Virginia in 1963, Edwin Okoroma and his fellow UNC men’s soccer teammates stopped at a restaurant. They entered the diner, and a woman approached him saying, “We don’t serve Blacks here.”</p>
 <p>For Black people living in the South during the 1960s, this was not an uncommon experience. Okoroma simply said “no problem” and left the restaurant. </p>
 <p>“What impressed me the most was the minute that I got up to leave, my teammates, without anything, also got up and followed me,” Okoroma said.</p>
@@ -63,6 +57,7 @@
 <p>At a time when Franklin Street was still segregated and few Black students attended the University, Okoroma was a pioneer — the first in a long line of influential Black athletes at UNC.</p>
 <p>“That was okay with me,” Okoroma said of being the school’s first Black athlete. “I knew there was no history of it.”</p>
 <p>To this day, despite being an undeniable trailblazer at UNC, few people are aware of Okoroma and his story.</p>
+<div class="spacer"></div>
 <h4>‘I'm going to America to study, not to fight segregation’</h4>
 <p>Okoroma was born on March 14, 1940, and grew up in Imo State, Nigeria. He attended a mission school from 1954 to 1958, where he first started playing soccer.</p>
 <p>After secondary school, he went to a post-secondary school in Lagos, Nigeria called the Federal Emergency Science School, where he wasn’t able to play soccer due to his studies.</p>
@@ -73,6 +68,26 @@
 <p>UNC was one of the first southern schools to key in on the scholarship. When ASPAU expanded in 1961, 239 African students were admitted to American universities. Okoroma was one of 246 students selected to the 1962 class.</p>
 <p>Upon his enrollment into UNC, Okoroma became the first Black African at the school. He majored in chemistry with the intention of going to medical school after graduation.</p>
 <p>During his first two years at UNC, Okoroma lived with Bill Strong — a fellow pre-med student — in Teague Residence Hall 326. Strong and his father, a professor of microbiology at the School of Medicine, “were very, very supportive” of Okoroma, he said.</p>
+
+<div class="spacer"></div>
+
+<div class="Backback">
+<audio src="audio/okoroma-voa-1.mp3" id="voa-1"></audio>
+<div class="audio-card" id="voa-1-card">
+    <p class="AudioHed">Interview With Edwin from Voices of America</p>
+    <img class="AudioPic" src="photos/audio_pic.png" alt="Voices of America Picture">
+    <p class="AudioP">During his first two years at UNC, Okoroma lived with Bill Strong — a fellow pre-med student — in Teague Residence Hall 326. Strong and his father, a professor of microbiology at the School of Medicine, “were very, very supportive” of Okoroma, he said.</p>
+</div>
+</div>
+
+<div class="Backback2">
+    <audio src="audio/okoroma-voa-2.mp3" id="voa-2"></audio>
+    <div class="audio-card" id="voa-2-card">
+    </div>
+    </div>
+
+<div class="spacer"></div>
+
 <p>Being an early winner of the ASPAU scholarship, a lot of pressure was put on Okoroma’s shoulders to succeed despite potential discrimination. During the interview process, Okoroma said the scholarship panel asked him a simple question: What would he do if someone stood up from their table when he sat down to eat?</p>
 <p>“I said, well, I'm going to continue doing what I'm doing because I'm going to America to study, not to fight segregation,” Okoroma said. “And that is a fact too big for me at the moment.”</p>
 <p>He would have such an experience, though. After chemistry class one day, Okoroma said he walked into Lenoir Dining Hall during lunch rush hour. He got his food and looked around for an empty place to sit and found an open spot.</p>
@@ -80,13 +95,20 @@
 <p>The following semester, after realizing that Okoroma was not an American, but rather an international student from Nigeria, that same student knocked on Okoroma’s door to apologize.</p>
 <p>Okoroma said this specific moment did not bother him, but rather, it was the young man’s apology that did.</p>
 <p>“That made me more angry,” Okoroma said. “So it was alright for him to sit down with a Black African, but it wasn't good enough to sit down with an American Black student? So I just told him I wasn't impressed with his apology and he should go.”</p>
+<div class="spacer"></div>
 <h4>‘I had to prove myself to belong’</h4>
 <p>On the UNC soccer team, Okoroma said he had “no problem at all” with racial discrimination.</p>
 <p>Despite not having played organized soccer since 1955, Okoroma tried out for coach Marvin Allen and earned a spot on the roster. The squad was largely made up of players from prep schools in the Northeast.</p>
+
+<div class="spacer"></div>
+
 <figure>
     <img class="Team" src="photos/Team Photo.png" alt="Team Photo">
-    <figcaption><i>Two of his teammates were Charlie Battle and Jim Talbot.</i></figcaption>
+    <figcaption class="photcap"><i>Two of his teammates were Charlie Battle and Jim Talbot.</i></figcaption>
 </figure>
+
+<div class="spacer"></div>
+
 <p>Charlie Battle and Jim Talbot were teammates with Okoroma both seasons he was on the varsity team. They both remembered Okoroma being kind, yet typically quiet, around the team. Talbot said Okoroma “pretty much went his own way” whenever the team would hang out off the field.</p>
 <p>Okoroma agreed.</p>
 <p>“I was conscious of the fact that I was the only Black player there,” Okoroma said. “And the standards meant that I had to prove myself to belong and qualify for the team.”</p>
@@ -101,12 +123,20 @@
 <p>“We used to take bets in the locker room about how many people would be in the stands,” Battle said.</p>
 <p>Even Charlie Scott, who became the first Black scholarship athlete at UNC when he played on the basketball team in 1967, said he had not known about Okoroma and his story.</p>
 <p>“In the 1960’s, no one ever heard or talked about anything besides football and basketball,” Scott told The Daily Tar Heel in a text.</p>
+
+<div class="spacer"></div>
+
 <figure>
     <img class="Team" src="photos/Charlie_Scott.jpg" alt="Team Photo">
-    <figcaption><i>Photo Caption goes here.</i></figcaption>
-</figure><p>In Talbot’s words: “Soccer was a second class citizen back then.”</p>
+    <figcaption class="photcap"><i>Charlie Scott became UNC's first Black varsity athlete when he joined the men's basketball team in 1967. Scott would go on to lead the Tar Heels to two Final Fours and was named the ACC Athlete of the Year in 1970.</i></figcaption>
+</figure>
+
+<div class="spacer"></div>
+
+<p>In Talbot’s words: “Soccer was a second class citizen back then.”</p>
 <p>American sport historian Matthew Andrews said he believes that, because college soccer had a low profile, this allowed it to be the first sport to desegregate on UNC’s campus.</p>
 <p>“No one cared about it,” Andrews said. “When Charles Scott shows up, people care. People celebrate it or people get upset about it — battle lines were drawn. Football, same thing. But soccer, I'm sure no one knew for the most part.”</p>
+<div class="spacer"></div>
 <h4>‘You had to do well’</h4>
 <p>Despite being so far from home, the only time Okoroma said he felt lonely was during shorter holidays like Thanksgiving. For the most part, he would stay on campus, alone in his residence hall. To pass time, he enjoyed reading or just walking around campus and taking in its beauty.</p>
 <p>“UNC’s campus in the springtime was one of the best things you could ever imagine,” Okoroma said. “The cherry blossoms were there and the garden, which was a fun place for students to go and have their night out.”</p>
@@ -117,6 +147,7 @@
 <p>To remind him of home, he joined the YMCA, a group he was a member of back in Nigeria. He said it was a familiar institution, and that he got along well with the white students in the organization.</p>
 <p>Okoroma, who is a staunch Anglican, said there were no Anglican churches around UNC at the time. Instead, he attended the Episcopalian church. The pastor at his church, Reverend Thrash, as well as his deputy, helped raise funds for Okoroma to go to medical school.</p>
 <p>But despite his success in undergrad, Okoroma would face barriers along the way.</p>
+<div class="spacer"></div>
 <h4>‘A million-dollar question’</h4>
 <p>After graduating in 1965, Okoroma applied to UNC’s medical school but was not admitted. He was told UNC was not allowed to take non-Americans. Instead, he traveled north to New York to attend the University of Rochester School of Medicine and Dentistry.</p>
 <p>“The funny thing is that I got admitted to the University of Rochester, which was at least at the time, better recognized as a medical institution than UNC,” Okoroma said.</p>
@@ -134,11 +165,17 @@
 <p>Despite the many hardships he faced, Okoroma came to UNC to get an education and one day return to practice medicine in Nigeria. He was able to accomplish both.</p>
 <p>Almost six decades after he graduated UNC and made history by becoming the first Black varsity athlete at North Carolina, Okoroma said he still remembers Chapel Hill with “a great deal of fondness.”</p>
 <p>“I wish I could visit North Carolina again just to remind me of what life was all like,” he said.</p>
+
+<div class="spacer"></div>
+
+<a href="#" class="my-button">Back To Top</a>
+
+<div class="spacer"></div>
+
 <div class="spacer"></div>
 <div class="line"></div>
 <div class="spacer"></div>
 <div class="spacer"></div>
-
 </div>
 <div class="col-12 col-sm-3"></div>
 </div>
