Updating spacing for mobile

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 <div class="row">
     <div class="col-12" id="article-top">
         <h3 id="subhead" class="hidden">The untold story of Edwin Okoroma, UNC’s first Black varsity athlete</h3>
-        <div id="main-art" class="hidden"><img src="photos/Main_Art.png" alt=""></div>
+        <div id="main-art" class="hidden">
+                <img src="photos/Main_Art.png" alt="">
+                <figcaption>Photos courtesy of University Archives, DTH Archives</figcaption>
+        </div>
     </div>
 </div>
 <div class="row">
@@ -49,7 +52,6 @@
 </div>
 
 <div class="col-12 col-sm-6" id="body-content">
-<figcaption>Photo Courtesy of University Archives, DTH Archive</figcaption>
 <p><span class="dropcap">T</span>raveling up to Charlottesville, Va., to take on the University of Virginia in 1963, Edwin Okoroma and his fellow UNC men’s soccer teammates stopped at a restaurant. They entered the diner, and a woman approached him saying, “We don’t serve Blacks here.”</p>
 <p>For Black people living in the South during the 1960s, this was not an uncommon experience. Okoroma simply said “no problem” and left the restaurant. </p>
 <p>“What impressed me the most was the minute that I got up to leave, my teammates, without anything, also got up and followed me,” Okoroma said.</p>
@@ -74,17 +76,15 @@
 <div class="Backback">
 <audio src="audio/okoroma-voa-1.mp3" id="voa-1"></audio>
 <div class="audio-card" id="voa-1-card">
-    <p class="AudioHed">Interview With Edwin from Voices of America</p>
     <img class="AudioPic" src="photos/audio_pic.png" alt="Voices of America Picture">
-    <p class="AudioP">During his first two years at UNC, Okoroma lived with Bill Strong — a fellow pre-med student — in Teague Residence Hall 326. Strong and his father, a professor of microbiology at the School of Medicine, “were very, very supportive” of Okoroma, he said.</p>
+    <p class="AudioP">In 1964, Okoroma was interviewed for a "Voices of America" radio documentary that's been preserved by the University Archives. Listen to excerpts from that audio below:</p>
 </div>
 </div>
 
 <div class="Backback2">
-    <audio src="audio/okoroma-voa-2.mp3" id="voa-2"></audio>
-    <div class="audio-card" id="voa-2-card">
-    </div>
-    </div>
+    <audio src="audio/okoroma-voa-3.mp3" id="voa-2"></audio>
+    <div class="audio-card" id="voa-2-card"></div>
+</div>
 
 <div class="spacer"></div>
 
@@ -104,7 +104,7 @@
 
 <figure>
     <img class="Team" src="photos/Team Photo.png" alt="Team Photo">
-    <figcaption class="photcap"><i>Two of his teammates were Charlie Battle and Jim Talbot.</i></figcaption>
+    <figcaption class="photcap"><i>The 1963 North Carolina men's soccer team. Edwin Okoroma is positioned in the middle of the second row. Photo courtesy of University Archives.</i></figcaption>
 </figure>
 
 <div class="spacer"></div>
@@ -128,7 +128,7 @@
 
 <figure>
     <img class="Team" src="photos/Charlie_Scott.jpg" alt="Team Photo">
-    <figcaption class="photcap"><i>Charlie Scott became UNC's first Black varsity athlete when he joined the men's basketball team in 1967. Scott would go on to lead the Tar Heels to two Final Fours and was named the ACC Athlete of the Year in 1970.</i></figcaption>
+    <figcaption class="photcap"><i>Charlie Scott became UNC's first Black varsity athlete when he joined the men's basketball team in 1966. Scott would go on to lead the Tar Heels to two Final Fours and was named the ACC Athlete of the Year in 1970. Photo from DTH Archives.</i></figcaption>
 </figure>
 
 <div class="spacer"></div>
