I wanna finish this

--- a/index.html
+++ b/index.html
@@ -119,10 +119,23 @@
 <p>During the 1964 season, Talbot and Okoroma combined to thrash N.C. State, 4-1 in their final game against the Wolfpack. Both tallied a brace in a dominant victory that saw UNC outshoot N.C. State, 32-12.</p>
 <p>While Okoroma emerged as a go-to goal scorer, he said it wasn’t his sole focus.</p>
 <p>“I was more interested in scoring when I had the best opportunity,” Okoroma said. “If somebody was better placed near the goal, then I would pass the ball to him and let him score. But the one important thing was that our team wins.”</p>
+
+<div class="spacer"></div>
+
+<figure>
+    <img class="Team" src="photos/New_Clip.jpeg" alt="DTH Newspaper Clipping">
+    <figcaption class="photcap"><i>One of Okoroma's most notable games was in 1964 when he scored a brace in a 4-1 victory over rival N.C. State. Famed baseball writer Peter Gammons, then just a DTH staffer, covered the match. Photo from DTH Archives.</i></figcaption>
+</figure>
+
+<div class="spacer"></div>
+
 <p>Despite his prowess on the pitch, Battle said he believes Okoroma does not get the same level of recognition in UNC sports history because of how “low-key” soccer was at the time. Talbot even described a soccer athlete as a “second-class citizen” back then.</p>
 <p>“We used to take bets in the locker room about how many people would be in the stands,” Battle said.</p>
 <p>Even Charlie Scott, who became the first Black scholarship athlete at UNC when he played on the basketball team in 1967, said he had not known about Okoroma and his story.</p>
 <p>“In the 1960’s, no one ever heard or talked about anything besides football and basketball,” Scott told The Daily Tar Heel in a text.</p>
+<p>In Talbot’s words: “Soccer was a second class citizen back then.”</p>
+<p>American sport historian Matthew Andrews said he believes that, because college soccer had a low profile, this allowed it to be the first sport to desegregate on UNC’s campus.</p>
+<p>“No one cared about it,” Andrews said. “When Charles Scott shows up, people care. People celebrate it or people get upset about it — battle lines were drawn. Football, same thing. But soccer, I'm sure no one knew for the most part.”</p>
 
 <div class="spacer"></div>
 
@@ -133,10 +146,6 @@
 
 <div class="spacer"></div>
 
-<p>In Talbot’s words: “Soccer was a second class citizen back then.”</p>
-<p>American sport historian Matthew Andrews said he believes that, because college soccer had a low profile, this allowed it to be the first sport to desegregate on UNC’s campus.</p>
-<p>“No one cared about it,” Andrews said. “When Charles Scott shows up, people care. People celebrate it or people get upset about it — battle lines were drawn. Football, same thing. But soccer, I'm sure no one knew for the most part.”</p>
-<div class="spacer"></div>
 <h4>‘You had to do well’</h4>
 <p>Despite being so far from home, the only time Okoroma said he felt lonely was during shorter holidays like Thanksgiving. For the most part, he would stay on campus, alone in his residence hall. To pass time, he enjoyed reading or just walking around campus and taking in its beauty.</p>
 <p>“UNC’s campus in the springtime was one of the best things you could ever imagine,” Okoroma said. “The cherry blossoms were there and the garden, which was a fun place for students to go and have their night out.”</p>
