--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
 <figure>
     <img class="Team" src="photos/Team Photo.png" alt="Team Photo">
-    <figcaption class="photcap"><i>The 1963 North Carolina men's soccer team. Edwin Okoroma is positioned in the middle of the second row. Photo courtesy of University Archives.</i></figcaption>
+    <figcaption class="photcap"><i>The North Carolina men’s soccer team is pictured in 1963. Edwin Okoroma is positioned in the middle of the second row. Photo courtesy of University Archives.</i></figcaption>
 </figure>
 
 <div class="spacer"></div>
