--- a/index.html
+++ b/index.html
@@ -156,7 +156,32 @@
 <p>To remind him of home, he joined the YMCA, a group he was a member of back in Nigeria. He said it was a familiar institution, and that he got along well with the white students in the organization.</p>
 <p>Okoroma, who is a staunch Anglican, said there were no Anglican churches around UNC at the time. Instead, he attended the Episcopalian church. The pastor at his church, Reverend Thrash, as well as his deputy, helped raise funds for Okoroma to go to medical school.</p>
 <p>But despite his success in undergrad, Okoroma would face barriers along the way.</p>
+
 <div class="spacer"></div>
+
+<div class="photo-cntainer">
+    <div class="image-slider">
+        <img src="photos/clips/17101962-okoroma.png" class="slide" onclick="openModal(this)">
+        <img src="photos/clips/19051963-okoroma.png" class="slide" onclick="openModal(this)">
+        <img src="photos/clips/09111963-okoroma.png" class="slide" onclick="openModal(this)">
+        <img src="photos/clips/25111963-okoroma.png" class="slide" onclick="openModal(this)">
+        <img src="photos/clips/15021964-okoroma.png" class="slide" onclick="openModal(this)">
+        <img src="photos/clips/04031964-okoroma.png" class="slide" onclick="openModal(this)">
+        <img src="photos/clips/13101964-okoroma.png" class="slide" onclick="openModal(this)">
+        <img src="photos/clips/27101964-okoroma.png" class="slide" onclick="openModal(this)">
+    </div>
+</div>
+
+<figcaption><i>Okoroma appeared several times in the Daily Tar Heel as a student at UNC. Click on the clippings above to read more.</i></figcaption>
+
+<!-- Modal for full-screen view -->
+<div id="imageModal" class="modal">
+    <span class="close" onclick="closeModal()">&times;</span>
+    <img class="modal-content" id="fullImage">
+</div>
+
+<div class="spacer"></div>
+
 <h4>‘A million-dollar question’</h4>
 <p>After graduating in 1965, Okoroma applied to UNC’s medical school but was not admitted. He was told UNC was not allowed to take non-Americans. Instead, he traveled north to New York to attend the University of Rochester School of Medicine and Dentistry.</p>
 <p>“The funny thing is that I got admitted to the University of Rochester, which was at least at the time, better recognized as a medical institution than UNC,” Okoroma said.</p>
@@ -175,27 +200,6 @@
 <p>Almost six decades after he graduated UNC and made history by becoming the first Black varsity athlete at North Carolina, Okoroma said he still remembers Chapel Hill with “a great deal of fondness.”</p>
 <p>“I wish I could visit North Carolina again just to remind me of what life was all like,” he said.</p>
 
-<div class="spacer"></div>
-
-<div class="photo-cntainer">
-    <div class="image-slider">
-        <img src="photos/Charlie_Scott.jpg" class="slide" onclick="openModal(this)">
-        <img src="photos/Main_Art.png" class="slide" onclick="openModal(this)">
-        <img src="photos/New_Clip.jpeg" class="slide" onclick="openModal(this)">
-        <img src="photos/Okoroma Voice of America Image.jpeg" class="slide" onclick="openModal(this)">
-        <img src="photos/Team Photo.png" class="slide" onclick="openModal(this)">
-        <img src="photos/University of Rochester 50th Anniversary Photo.png" class="slide" onclick="openModal(this)">
-        <img src="photos/Yackety yack [1965] Team Photo Pg. 176.png" class="slide" onclick="openModal(this)">
-        <img src="photos/Yackety Yak [1964] Team Photo.png" class="slide" onclick="openModal(this)">
-        <img src="photos/Yackety Yak [1965] Senior Photo.png" class="slide" onclick="openModal(this)">
-    </div>
-</div>
-
-<!-- Modal for full-screen view -->
-<div id="imageModal" class="modal">
-    <span class="close" onclick="closeModal()">&times;</span>
-    <img class="modal-content" id="fullImage">
-</div>
 
 <div class="spacer"></div>
 
