--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
 <figure>
     <img class="Team" src="photos/New_Clip.jpeg" alt="DTH Newspaper Clipping">
-    <figcaption class="photcap"><i>One of Okoroma's most notable games was in 1964 when he scored a brace in a 4-1 victory over rival N.C. State. Famed baseball writer Peter Gammons, then just a DTH staffer, covered the match. Photo from DTH Archives.</i></figcaption>
+    <figcaption class="photcap"><i>One of Okoroma's most notable games was in 1964 when he scored a brace in a 4-1 victory over rival N.C. State. Famed baseball writer Peter Gammons, then just a DTH staffer, covered the match. Photo courtesy of DTH Archives.</i></figcaption>
 </figure>
 
 <div class="spacer"></div>
@@ -141,7 +141,7 @@
 
 <figure>
     <img class="Team" src="photos/Charlie_Scott.jpg" alt="Team Photo">
-    <figcaption class="photcap"><i>Charlie Scott became UNC's first Black varsity athlete when he joined the men's basketball team in 1966. Scott would go on to lead the Tar Heels to two Final Fours and was named the ACC Athlete of the Year in 1970. Photo from DTH Archives.</i></figcaption>
+    <figcaption class="photcap"><i>Charlie Scott became UNC's first Black varsity athlete when he joined the men's basketball team in 1966. Scott would go on to lead the Tar Heels to two Final Fours and was named the ACC Athlete of the Year in 1970. Photo courtesy of DTH Archives.</i></figcaption>
 </figure>
 
 <div class="spacer"></div>
@@ -159,6 +159,8 @@
 
 <div class="spacer"></div>
 
+<figcaption><i>Okoroma appeared several times in the Daily Tar Heel as a student at UNC. Click on the clippings below to read more.</i></figcaption>
+
 <div class="photo-cntainer">
     <div class="image-slider">
         <img src="photos/clips/17101962-okoroma.png" class="slide" onclick="openModal(this)">
@@ -171,8 +173,6 @@
         <img src="photos/clips/27101964-okoroma.png" class="slide" onclick="openModal(this)">
     </div>
 </div>
-
-<figcaption><i>Okoroma appeared several times in the Daily Tar Heel as a student at UNC. Click on the clippings above to read more.</i></figcaption>
 
 <!-- Modal for full-screen view -->
 <div id="imageModal" class="modal">
