--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
 <figure>
     <img class="Team" src="photos/Charlie_Scott.jpg" alt="Team Photo">
-    <figcaption class="photcap"><i>Charlie Scott became UNC's first Black varsity athlete when he joined the men's basketball team in 1966. Scott would go on to lead the Tar Heels to two Final Fours and was named the ACC Athlete of the Year in 1970. Photo courtesy of DTH Archives.</i></figcaption>
+    <figcaption class="photcap"><i>Charlie Scott became UNC's first Black scholarship varsity athlete when he joined the men's basketball team in 1966. Scott would go on to lead the Tar Heels to two Final Fours and was named the ACC Athlete of the Year in 1970. Photo courtesy of DTH Archives.</i></figcaption>
 </figure>
 
 <div class="spacer"></div>
